[package]
name = "digital-asset-ledger"
version = "1.0.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = "2"
rand = "0.8"
tokio = { version = '1', features = ["full"] }
